[project]
name = "tweet"
version = "0.23.0"
authors = [
  { name="joelsgp", email="joelsgp@protonmail.com" },
]
description = "Random thought saver"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.scripts]
tweet = "tweet:main"

[project.urls]
"Homepage" = "https://github.com/joelsgp/tweet"
