[project]
name = "tweet"
version = "0.24.0"
description = "Random thought saver"
readme = "README.md"
requires-python = ">=3.8"
license.file = "LICENSE"
authors = [
  { name="joelsgp", email="joelsgp@protonmail.com" },
]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/joelsgp/tweet"

[project.scripts]
tweet = "tweet:main"
