[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tweet"
readme = "README.md"
requires-python = ">=3.8"
license.file = "LICENSE"
authors = [
  { name="joelsgp", email="joelsgp@protonmail.com" },
]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]

[project.urls]
"Homepage" = "https://github.com/joelsgp/tweet"

[project.scripts]
tweet = "tweet:main"
